added login page (in progress), more testing, routes, added proper parameters to authenticated? call in the users controller

--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -1,9 +1,6 @@
 %h1 Home
 
-
-
-
-
-=link_to 'Today', 'events/today'
-=link_to 'Tomorrow', 'events/tomorrow'
-=link_to 'This Week', 'events/this_week'
+%div= link_to 'Today', 'events/today'
+%div= link_to 'Tomorrow', 'events/tomorrow'
+%div= link_to 'This Week', 'events/this_week'
+%div= link_to 'Login', 'user/login'
