--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -1,9 +1,5 @@
 %h1 Home
 
-
-
-
-
 =link_to 'Today', 'events/today'
 =link_to 'Tomorrow', 'events/tomorrow'
-=link_to 'This Week', 'events/this_week'
+=link_to 'This Week', 'events/week'
