logout flow and more work on keywords tests

--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -1,5 +1,6 @@
 %h1 Home
 
+= flash[:info]
 %div= link_to 'Today', 'events/today'
 %div= link_to 'Tomorrow', 'events/tomorrow'
 %div= link_to 'This Week', 'events/week'
