cleaned up login/logout flow

--- a/app/views/users/login.html.haml
+++ b/app/views/users/login.html.haml
@@ -2,7 +2,7 @@
 
 %div= flash[:warning]
 
-= form_tag '/user/verify', :method => :post do 
+= form_tag '/user/authenticate', :method => :post do 
 	%ul
 		%li
 			= label :login, :username, 'Username: '
