Migration to change column name end to finish in events table, issues on heroku db

--- a/app/views/events/events_list.html.haml
+++ b/app/views/events/events_list.html.haml
@@ -6,14 +6,14 @@
             %th Title 
             %th Location
             %th Start
-            %th End
+            %th Finish
     %tbody
         - @events.each do |event|
             %tr
                 %td= event.title 
                 %td= event.location
                 %td= event.start
-                %td= event.end
+                %td= event.finish
 -# %td= link_to "More about #{movie.title}", movie_path(movie)
 
 -# = link_to 'Add new movie', new_movie_path
