--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -7,7 +7,7 @@
             %th Title
             %th Location
             %th Start
-            %th End
+            %th Finish
             %th
             %th
             %th
@@ -17,7 +17,7 @@
                 %td= event["title"]
                 %td= event["location"]
                 %td= event["start"]
-                %td= event["end"]
+                %td= event["finish"]
                 %td= link_to 'Show', event
                 %td= link_to 'Edit', edit_event_path(event)
                 %td= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' }
