--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,23 +1,30 @@
-%h1 Listing all events
-- if @events.count > 0 then
-    = "#{@events.count} events stored in database."
-%table
-    %thead
-        %tr
-            %th Title
-            %th Location
-            %th Start
-            %th Finish
-            %th
-            %th
-            %th
-    %tbody
-        - @events.each do |event|
-            %tr
-                %td= event["title"]
-                %td= event["location"]
-                %td= event["start"]
-                %td= event["finish"]
-                %td= link_to 'Show', event
-                %td= link_to 'Edit', edit_event_path(event)
-                %td= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' }
+%head
+ = stylesheet_link_tag 'events.css'
+
+%section#header
+ %h1 Listing all events
+
+ %div#flash-info= flash[:info]
+
+%section#content
+ %table#events
+  %thead
+   %tr
+    %th Title
+    %th Location
+    %th Start
+    %th Finish
+    %th
+    %th
+    %th
+  %tbody
+   - @events.each do |event|
+    %tr
+     %td= event["title"]
+     %td= event["location"]
+     %td= event["start"]
+     %td= event["finish"]
+     %td= link_to 'Show', event
+     %td= link_to 'Edit', edit_event_path(event)
+     %td= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' }
+
