--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -1,3 +1,6 @@
+%head
+ = stylesheet_link_tag 'home.css'
+
 %section#header
  %h1 Colgate Calendar
  
@@ -14,3 +17,4 @@
  %h2= link_to 'Today', 'events/today'
  %h2= link_to 'Tomorrow', 'events/tomorrow'
  %h2= link_to 'This Week', 'events/week'
+ 
