View Past Events -> still need to sort them

--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -17,4 +17,4 @@
  %h2= link_to 'Today', 'events/today'
  %h2= link_to 'Tomorrow', 'events/tomorrow'
  %h2= link_to 'This Week', 'events/week'
- 
+ %h2= link_to 'In The Past', 'events/past' 
