--- a/app/views/events/events_list.html.haml
+++ b/app/views/events/events_list.html.haml
@@ -14,6 +14,8 @@
     %th Location
     %th Start
     %th Finish
+    - if session[:logged_in] then
+     %th Vote
   %tbody
    - @events.each do |event|
     %tr
@@ -21,6 +23,10 @@
      %td= event.location
      %td= event.start
      %td= event.finish
+     - if session[:logged_in] then
+      %td
+       = link_to "upvote", event_upvote_path(:id => event.id)
+       = link_to "downvote", event_downvote_path(event)
 -# %td= link_to "More about #{movie.title}", movie_path(movie)
 
 -# = link_to 'Add new movie', new_movie_path
