Formatted event dates so they're human-readable by extending the time class in config/initializers/time.rb

--- a/app/views/events/events_list.html.haml
+++ b/app/views/events/events_list.html.haml
@@ -21,8 +21,8 @@
     %tr
      %td= link_to "#{event.title}", event_path(event)
      %td= link_to "#{event.location}", event_path(event)
-     %td= link_to "#{event.start}", event_path(event)
-     %td= link_to "#{event.finish}", event_path(event)
+     %td= link_to "#{event.start.nice_format}", event_path(event)
+     %td= link_to "#{event.finish.nice_format}", event_path(event)
      - if session[:logged_in] then
       %td
        = link_to "upvote", event_upvote_path(:id => event.id)
