Removed unicode gear icon due to lack of mobile support

--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -18,4 +18,4 @@
  %h2= link_to 'Tomorrow', 'events/tomorrow'
  %h2= link_to 'This Week', 'events/week'
  %h2= link_to 'In The Past', 'events/past' 
- %h2= link_to raw('&#x2699; Settings'), 'settings'
+ %h2= link_to 'Settings', 'settings'
