--- a/app/assets/stylesheets/global/global.css
+++ b/app/assets/stylesheets/global/global.css
@@ -18,10 +18,11 @@ body {
 	color: #000;
 	font-size: 1em;
 	margin: 5px;
+	width: 100%;
 }
 
 h1 {
-	font-size: 3em;
+	font-size: 2.5em;
 }
 
 h2 {
