--- a/app/assets/stylesheets/global/global.css
+++ b/app/assets/stylesheets/global/global.css
@@ -32,7 +32,7 @@ body {
 	}
 }
 
-@media all and (max-width: 720px) {
+@media all and (max-device-width: 720px) {
 	h1 {
 		font-size: 5em;
 		color: #F00;
