--- a/app/assets/stylesheets/global/global.css
+++ b/app/assets/stylesheets/global/global.css
@@ -17,7 +17,7 @@ a:active {
 body {
 	color: #000;
 	font-size: 1em;
-	margin: 5px;
+	margin: 0.2em;
 }
 
 @media all {
@@ -56,9 +56,9 @@ h2 {
 	background: linear-gradient(to bottom, rgba(134,38,51,1) 0%,rgba(173,50,52,1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#862633', endColorstr='#ad3234',GradientType=0 );
 
-	border-radius: 5px;
-	margin: 5px auto;
-	padding: 5px 0;
+	border-radius: 0.2em;
+	margin: 0.2em auto;
+	padding: 0.2em 0;
 	text-align: center;
 }
 
@@ -76,7 +76,7 @@ h2 > a:active {
 }
 
 section {
-	margin-bottom: 20px;
+	margin-bottom: 1em;
 }
 
 section#header {
