--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -1,11 +1,11 @@
 table {
-	border: 1px solid #862633;
-	border-radius: 5px;
-	padding: 5px;
+	border: 0.1em solid #862633;
+	border-radius: 0.2em;
+	padding: 0.2em;
 }
 
 td, th {
-	border-right: 1px solid #AD3234;
+	border-right: 0.1em solid #AD3234;
 }
 
 td {
@@ -34,17 +34,17 @@ td:nth-child(5), td:nth-child(6), td:nth-child(7) {
 }
 
 th {
-	font-size: 18px;
+	font-size: 1.1em;
 }
 
 thead > tr {
 	background-color: #B58484;
-	border-bottom: 4px solid #AD3234;
+	border-bottom: 0.3em solid #AD3234;
 }
 
 tr {
-	border-bottom: 1px solid #AD3234;
-	padding: 5px;
+	border-bottom: 0.1em solid #AD3234;
+	padding: 0.2em;
 }
 
 tr:nth-child(even) {
@@ -56,5 +56,7 @@ tr:nth-child(odd) {
 }
 
 tbody tr a {
-display: block; width: 100%; height: 100%; 	
+	display: block;
+	height: 100%;
+	width: 100%;
 }
