--- a/app/assets/stylesheets/global/global.css
+++ b/app/assets/stylesheets/global/global.css
@@ -25,7 +25,7 @@ body {
 		font-size: 2.5em;
 	}
 
-	h2 {
+	h2 > a {
 		font-size: 2em;
 		max-width: 200px;
 		width: 40%;
@@ -37,7 +37,7 @@ body {
 		font-size: 5em;
 	}
 
-	h2 {
+	h2 > a {
 		font-size: 5em;
 		height: 20%;
 		max-width: 700px;
