--- a/app/views/users/login.html.haml
+++ b/app/views/users/login.html.haml
@@ -2,12 +2,13 @@
 
 %div= flash[:warning]
 
+%h3= link_to "Home", '/'
 = form_tag '/user/authenticate', :method => :post do 
-	%ul
-		%li
-			= label :login, :username, 'Username: '
-			= text_field :login, 'username'
-		%li
-			= label :login, :password, 'Password: '
-			= password_field :login, 'password'
-	= submit_tag 'Login'
+ %ul
+ %li
+  = label :login, :username, 'Username: '
+  = text_field :login, 'username'
+ %li
+  = label :login, :password, 'Password: '
+  = password_field :login, 'password'
+ = submit_tag 'Login'
