--- a/app/views/events/event.html.haml
+++ b/app/views/events/event.html.haml
@@ -1,9 +1,8 @@
-%head
-
-%h1 #{@event.title}
+%section#header
+ %h1 #{@event.title}
 
 %section#content
- %h3= link_to "Home", '/'
+ %h3= link_to 'Home', '/'
  %ul#info
   %li
    Description:
