--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -8,7 +8,7 @@
  = "#{@events.count} events stored in database."
 
 %section#content
- %h3= link_to "Home", '/'
+ %h3= link_to 'Home', '/'
  %table#events
   %thead
    %tr
