Worked on upvote and downvote cucumber tests

--- a/app/views/events/events_list.html.haml
+++ b/app/views/events/events_list.html.haml
@@ -34,5 +34,5 @@
        - if vote == false then
         = "downvoted"
        - else
-        = link_to "downvote", event_downvote_path(event)
+        = link_to "downvote", event_downvote_path(:id => event.id)
 
