Added settings route, logic and view, and exhaustive list of tags to select from

--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -18,4 +18,5 @@
  %h2= link_to 'Tomorrow', 'events/tomorrow'
  %h2= link_to 'This Week', 'events/week'
  %h2= link_to 'In The Past', 'events/past' 
- %h2= link_to 'Settings', 'settings'
+ - if session[:logged_in] then
+  %h2= link_to 'Settings', "user/#{session[:id]}/settings"
