admins can now view votes, also modified our tag list

--- a/app/views/events/events_list.html.haml
+++ b/app/views/events/events_list.html.haml
@@ -31,8 +31,10 @@
         = link_to "upvoted", event_unvote_path(:id => event.id)
        - else
         = link_to "upvote", event_upvote_path(:id => event.id)
+       = event_vote_tuple.third
        - if vote == false then
         = link_to "downvoted", event_unvote_path(:id => event.id)
        - else
         = link_to "downvote", event_downvote_path(:id => event.id)
+       = event_vote_tuple.fourth
 
