--- a/app/views/events/events_list.html.haml
+++ b/app/views/events/events_list.html.haml
@@ -8,37 +8,35 @@
 
 %section#content
  %h3= link_to 'Home', '/'
- %table#events
-  %thead
-   %tr
-    %th Title 
-    %th Location
-    %th Start
-    %th Finish
-    - if session[:logged_in] and @when == "Past Events" then
-     %th Vote
-  %tbody
-   - @events.each do |event|
-    - vote_object = event.votes.find_by_voter_id(session[:id])
-    - vote = vote_object != nil ? vote_object.vote : nil 
-    %tr
-     %td= link_to "#{event.title}", event_path(event)
-     %td= link_to "#{event.location}", event_path(event)
-     %td= link_to "#{event.start.nice_format}", event_path(event)
-     %td= link_to "#{event.finish.nice_format}", event_path(event)
-     - if @when == "Past Events" then
-      - if session[:logged_in] then
-       %td
+ %ul#events
+  - @events.each do |event|
+   - vote_object = event.votes.find_by_voter_id(session[:id])
+   - vote = vote_object != nil ? vote_object.vote : nil 
+   %li.event
+    %div.title= link_to event.title, event_path(event)
+    %div.panel.left
+     %div.voting
+      - if session[:logged_in] and @when == "Past Events" then
+       %div.votebox.up
         - if vote == true then
-         = link_to "upvoted", event_unvote_path(:id => event.id)
+         %span.vote.yes= link_to raw("&uarr;"), event_unvote_path(:id => event.id)
         - else
-         = link_to "upvote", event_upvote_path(:id => event.id)
-        - if session[:admin] == true
-         = event.votes_for
+         %span.vote.no= link_to raw("&uarr;"), event_upvote_path(:id => event.id)
+        - if session[:admin] == true then
+         %span.vote_count= "+" + event.votes_for
+       %div.votebox.down
         - if vote == false then
-         = link_to "downvoted", event_unvote_path(:id => event.id)
+         %span.vote.yes= link_to raw("&darr;"), event_unvote_path(:id => event.id)
         - else
-         = link_to "downvote", event_downvote_path(:id => event.id)
-        - if session[:admin] == true
-         = event.votes_against
+         %span.vote.no= link_to raw("&darr;"), event_downvote_path(:id => event.id)
+        - if session[:admin] == true then
+         %span.vote_count= "-" + event.votes_against
+    %div.panel.right
+     = link_to event_path(event) do
+      %div.locale
+       %span.label Where:
+       %span.locale= event.location
+      %div.locale
+       %span.label When:
+       %span.locale= event.start.nice_format + " to " + event.finish.nice_format
 
