--- a/app/views/events/event.html.haml
+++ b/app/views/events/event.html.haml
@@ -1,3 +1,6 @@
+%head
+ = stylesheet_link_tag 'event.css'
+
 %section#header
  %h1 #{@event.title}
 
@@ -5,23 +8,22 @@
  %h3= link_to 'Home', '/'
  %ul#info
   %li
-   Description:
-   = @event.description
+   %div.left Description:
+   %div.right= @event.description
   %li
-   Start Time:
-   = @event.start
+   %div.left Where:
+   %div.right= @event.location
   %li
-   Finish Time:
-   = @event.finish
+   %div.left When:
+   %div.right
+    %span.gray From
+    %span= @event.start.nice_format
+    %span.gray to
+    %span= @event.finish.nice_format
   %li
-   Location:
-   = @event.location
-  %li
-   Contact:
-   = @event.contact_name
-   = @event.contact_phone
+   %div.left Contact:
+   %div.right
+    %span= @event.contact_name
+    %span.gray at
+    %span= @event.contact_phone
 
-%tbody
- %th Rating:
- %th Textbox:
-  
